add threadID.cpp (task 1)
+ adapt CMakeLists

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,7 +6,12 @@ add_executable(matmult
     matmult.cpp
     )
 
+add_executable(threadID
+    threadID.cpp
+    )
+
 target_link_libraries(helloworld ${LIBRARIES})
+target_link_libraries(threadID ${LIBRARIES})
 
 add_executable(tests
     tests.cpp
