Makefile: Add targets for pdf and submission gzip

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,3 +1,4 @@
+.ONESHELL:
 GCC_FLAGS = -fopenmp -Wall
 
 .PHONY: build
@@ -17,5 +18,16 @@ test: matmult
 clean:
 	rm threadID matmult
 
+.PHONY: pvs.pdf
 pvs.pdf:
 	pandoc tasks.md -o pvs.pdf --from markdown --template /tmp/eisvogel.tex --listings
+
+FILES=Makefile matmult.cpp pvs.pdf tasks.md test.sh threadID.cpp
+DIR=pvs-01-gruppeC
+
+.PHONY: pvs-01-gruppeC-piekarski-wichmann-ruckel.tar.gz
+pvs-01-gruppeC-piekarski-wichmann-ruckel.tar.gz: pvs.pdf
+	mkdir $(DIR)
+	for f in $(FILES); do cp $$f $(DIR); done
+	tar zcvf pvs-01-gruppeC-piekarski-wichmann-ruckel.tar.gz $(DIR)
+	rm -fr $(DIR)
